--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
+<!-- Hlavni web. stranka aplikace -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FeetPicks</title>
+    <title>Weather</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
     <link rel="manifest" href="manifest.json">
+    <script src="app.js"></script>
 </head>
 <body>
-    <form>
-        <h1>Kalkulator 3000</h1>
-        <label>Zadej cisla:</label>
-        <input id="cislo1"> 
-        <select  id="operace">
-            <option value="+">+</option>
-            <option value="-">-</option>
-            <option value="*">*</option>
-            <option value="/">/</option>
-        </select> 
-        <input id="cislo2">
-        
-        <button onclick="Work()">Vysledek</button>
-        <p id="Vysledek" ></p>
-        <img hidden="true" id="911" src="icons\funny.gif"/>
-
-
-
-    </form>
+    <div id="weather">
+        <h1>Teplota</h1>
+        <div id="Jenikov">Větrný Jeníkov: </div>
+        <div id="jihlava">Jihlava: </div>
+        <div id="city">&nbsp;</div>
+        <hr />
+        <form>
+            <div>
+                <input type="text" id="input_city" placeholder="Zadej město" />
+            </div>
+            <button type="button" onclick="getUserCityTemp()">Zjisti teplotu</button>
+        </form>
+    </div>
 </body>
 </html>
